--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="mylogo"><h1>My Logo</h1></div>
+        <div class="menu_icon"><img src="Normal Button/Icon - Menu.svg" alt="Internet Lwaa Phuddi deya"></div>
+    </header>
 </body>
 </html>
