Headline Done as well

--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <div class="mylogo"><h1>My Logo</h1></div>
+        <div class="mylogo">My Logo</div>
         <div class="menu_icon"><img src="Normal Button/Icon - Menu.svg" alt="Internet Lwaa Phuddi deya"></div>
     </header>
+    <div class="headline">
+        <div class="primaryText">I am Haris. <br>Good To See You!</div>
+        <div class="primary2">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</div>
+        <div class="connect">Let's Connect</div>
+        <div class="social"><img src="social media icons.svg" alt=""></div>
+    </div>
 </body>
 </html>
