--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <header class="header">
         <div class="mylogo">My Logo</div>
-        <div class="menu_icon"><img src="Normal Button/Icon - Menu.svg" alt="Internet Lwaa Phuddi deya"></div>
+        <div class="menu_icon"><img src="Normal Button/Icon - Menu.svg" alt="Menu"></div>
     </header>
     <div class="headline">
         <div class="primaryText">I am Haris. <br>Good To See You!</div>
         <div class="primary2">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</div>
         <div class="connect">Let's Connect</div>
-        <div class="social"><img src="social media icons.svg" alt=""></div>
+        <div class="social"><img src="social media icons.svg" alt="Social Media Icons here"></div>
     </div>
 </body>
 </html>
