Created Work Container, having 4 Rows in a Grid

--- a/index.html
+++ b/index.html
@@ -15,10 +15,28 @@
         <div class="menu_icon"><img src="Normal Button/Icon - Menu.svg" alt="Menu"></div>
     </header>
     <section class="headline">
-        <div class="primaryText">I am Haris. <br>Good To See You!</div>
+        <div class="primaryText">I am Haris <br>Good To See You!</div>
         <div class="primary2">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</div>
         <div class="connect">Let's Connect</div>
         <div class="social"><img src="social media icons.svg" alt="Social Media Icons here"></div>
     </section>
+    <ul class="works">
+     <li class="card">
+        <img class="image1" src="./Snapshoot Portfolio.png" alt="Image">
+        <div class="primarytext3">
+            <div class="projectTitle">Tonic</div>
+            <div class="frame2">
+                <div class="client">Canopy</div>
+                <div class="counter"><img src="./Counter.svg" alt=""></div>
+                <div class="role">Back End Dev</div>
+                <img class="counter" src="./Counter.svg" alt="">
+                <div class="yearlabel">2015</div>
+            </div>
+        </div>
+    </li>
+    <li class="card"></li>
+    <li class="card"></li>
+    <li class="card"></li>
+    </ul>
 </body>
 </html>
