Added Works Section and 4 Cards in 4 Grid Rows

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Poppins:ital,wght@0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -20,8 +20,8 @@
         <div class="connect">Let's Connect</div>
         <div class="social"><img src="social media icons.svg" alt="Social Media Icons here"></div>
     </section>
-    <ul class="works">
-     <li class="card">
+    <section class="works">
+        <article class="card">
         <img class="image1" src="./Snapshoot Portfolio.png" alt="Image">
         <div class="primarytext3">
             <div class="projectTitle">Tonic</div>
@@ -33,10 +33,83 @@
                 <div class="yearlabel">2015</div>
             </div>
         </div>
-    </li>
-    <li class="card"></li>
-    <li class="card"></li>
-    <li class="card"></li>
-    </ul>
+        <div class="primaryText4">A daily selection of privately personalized reads; no accounts or sign-ups required.</div>
+        <ul class="tags">
+            <li class="tag">HTML</li>
+            <li class="tag">CSS</li>
+            <li class="tag">JavaScript</li>
+        </ul>
+        <div class="frame3">
+            <div class="normalButton">See Project</div>
+        </div>
+    </article>
+    
+    <article class="card">
+        <img class="image1" src="./Snapshoot Portfolio (3).png" alt="Image">
+        <div class="primarytext3">
+            <div class="projectTitle2">Multi-Post <br>Stories</div>
+            <div class="frame2">
+                <div class="client">Canopy</div>
+                <div class="counter"><img src="./Counter.svg" alt=""></div>
+                <div class="role">Back End Dev</div>
+                <img class="counter" src="./Counter.svg" alt="">
+                <div class="yearlabel">2015</div>
+            </div>
+        </div>
+        <div class="primaryText4">A daily selection of privately personalized reads; no accounts or sign-ups required.</div>
+        <ul class="tags">
+            <li class="tag">HTML</li>
+            <li class="tag">CSS</li>
+            <li class="tag">JavaScript</li>
+        </ul>
+        <div class="frame3">
+            <div class="normalButton">See Project</div>
+        </div>
+    </article>
+    <article class="card">
+        <img class="image1" src="./Snapshoot Portfolio (1).png" alt="Image">
+        <div class="primarytext3">
+            <div class="projectTitle">Tonic</div>
+            <div class="frame2">
+                <div class="client">Canopy</div>
+                <div class="counter"><img src="./Counter.svg" alt=""></div>
+                <div class="role">Back End Dev</div>
+                <img class="counter" src="./Counter.svg" alt="">
+                <div class="yearlabel">2015</div>
+            </div>
+        </div>
+        <div class="primaryText4">A daily selection of privately personalized reads; no accounts or sign-ups required.</div>
+        <ul class="tags">
+            <li class="tag">HTML</li>
+            <li class="tag">CSS</li>
+            <li class="tag">JavaScript</li>
+        </ul>
+        <div class="frame3">
+            <div class="normalButton">See Project</div>
+        </div>
+    </article>
+    <article class="card">
+        <img class="image1" src="./Snapshoot Portfolio (2).png" alt="Image">
+        <div class="primarytext3">
+            <div class="projectTitle2">Multi-Post <br>Stories</div>
+            <div class="frame2">
+                <div class="client">Canopy</div>
+                <div class="counter"><img src="./Counter.svg" alt=""></div>
+                <div class="role">Back End Dev</div>
+                <img class="counter" src="./Counter.svg" alt="">
+                <div class="yearlabel">2015</div>
+            </div>
+        </div>
+        <div class="primaryText4">A daily selection of privately personalized reads; no accounts or sign-ups required.</div>
+        <ul class="tags">
+            <li class="tag">HTML</li>
+            <li class="tag">CSS</li>
+            <li class="tag">JavaScript</li>
+        </ul>
+        <div class="frame3">
+            <div class="normalButton">See Project</div>
+        </div>
+    </article>
+    </section>
 </body>
 </html>
