Added about Myself Section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li class="tag">JavaScript</li>
         </ul>
         <div class="frame3">
-            <div class="normalButton">See Project</div>
+            <div class="normalButton1">See Project</div>
         </div>
     </article>
     
@@ -63,7 +63,7 @@
             <li class="tag">JavaScript</li>
         </ul>
         <div class="frame3">
-            <div class="normalButton">See Project</div>
+            <div class="normalButton1">See Project</div>
         </div>
     </article>
     <article class="card">
@@ -85,7 +85,7 @@
             <li class="tag">JavaScript</li>
         </ul>
         <div class="frame3">
-            <div class="normalButton">See Project</div>
+            <div class="normalButton1">See Project</div>
         </div>
     </article>
     <article class="card">
@@ -107,9 +107,64 @@
             <li class="tag">JavaScript</li>
         </ul>
         <div class="frame3">
-            <div class="normalButton">See Project</div>
+            <div class="normalButton1">See Project</div>
         </div>
     </article>
+    </section>
+    <section class="AboutMyself">
+        <article class="top">
+            <div class="primaryText5">
+                About Myself
+            </div>
+            <div class="primaryText6">
+                Hello I’m a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
+            </div>
+            <div class="socialMedia">
+                <div class="primaryText7">
+                    LET'S CONNECT
+                </div>
+                <div class="aboutIcons">
+                    <img src="GITHUB.svg" alt="">
+                    <img src="LINKEDIN.svg" alt="">
+                    <img src="VICTORY.svg" alt="">
+                    <img src="TWITTER.svg" alt="">
+                    <img src="medium.svg" alt="">
+                </div>
+            </div>
+            <div class="normalButton1">
+                Get my resume
+            </div>
+        </article>
+        <ul class="skillList">
+        <li class="languageFrame">
+            <div class="skilllist">
+                <div class="textSkill">
+                    Language
+                </div>
+                <div class="down"><img src="Icon - Chevron - Down - Larger(1).svg" alt=""></div>
+            </div>
+            <div class="languageList">
+                <div class="frame9"><img class="imageLanguage" src="JS.svg" alt="">
+                <div class="textLanguage">JavaScript</div>
+            </div>
+                <div class="frame9"><img src="HTML5.svg" alt=""><div class="textLanguage">HTML</div></div>
+                <div class="frame9"><img src="CSS3.svg" alt=""><div class="textLanguage">CSS</div></div>
+            </div>
+        </li>
+        <li class="skilllist"><div class="textSkill">
+                    Frameworks
+                </div>
+                <div class="down"><img src="Icon - Chevron - Right - Larger.svg" alt=""></div>
+
+            </li>
+            <div class="separator"></div>
+        <li class="skilllist"><div class="textSkill">
+                    Skills
+                </div>
+                <div class="down"><img src="Icon - Chevron - Right - Larger.svg" alt=""></div>
+            </li>
+                <div class="separator"></div>
+            </ul>
     </section>
 </body>
 </html>
