Pull Collaborator work

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
         <li class="skilllist"><div class="textSkill">
                     Frameworks
                 </div>
-                <div class="down"><img src="Icon - Chevron - Right - Larger.svg" alt=""></div>
-
+                <div class="down"><img src="Icon - Chevron - Right - Larger.svg" alt="">
+                </div>
             </li>
             <div class="separator"></div>
         <li class="skilllist"><div class="textSkill">
