--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
         I’d love to help with it!
         </div>
-        <form class="contactForm">
+        <form class="contactForm" action="https://formspree.io/f/xrgwopeo" method="post">
             <input class="name" type="text" placeholder="Your Name" required maxlength="30">
             <input class="email" type="email" placeholder="youremail@gmail.com" required >
             <textarea class="feedback" placeholder="Write your message here" name="feedback" cols="30" rows="10" required maxlength="500"></textarea>
@@ -182,7 +182,9 @@
                         Get In Touch
             </button>
         </form>
-       
+        <footer class="footBar">
+            <img src="Shape.png" alt="Footer Image">
+        </footer>
     </section>
 </body>
 </html>
