Created Contact Me Page, Added Animations

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         </div>
       </article>
     </section>
+    <!--About My Self Section-->
     <section class="AboutMyself">
       <article class="top">
         <div class="primaryText5">About Myself</div>
@@ -265,7 +266,8 @@
           placeholder="Write your message here"
           name="feedback"
           cols="30"
-          rows="10"
+          rows="10"-+
+
           required
           maxlength="500"
         ></textarea>
