--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <section class="header_headline">
       <header class="header">
         <div class="mylogo">My Logo</div>
+        <nav class="navbar">
+          <li class="navicons">Portfolio</li>
+          <li class="navicons">About</li>
+          <li class="navicons">Contact</li>
+        </nav>
+        </ul>
         <div class="menu_icon">
           <img src="Normal Button/Icon - Menu.svg" alt="Menu" />
         </div>
